[api] Restore buffering, tighten scope, and harden the compile path
Review follow-ups:
- Restore buffering on remote reads. Routing the repository downloads through
  Utils.openUrl dropped the BufferedInputStream those paths previously used, so
  openUrl now buffers the http stream and both callers get it back.
- Handle a null system java compiler explicitly. On a JRE, ToolProvider returns
  null and the opt-in path threw an NPE that surfaced as a misleading
  "Failed to compile" warning.
- Document that the destination check resolves the host name while the
  connection resolves it again, so a name can point elsewhere at connect time.
- Do not widen the public API more than needed: only openHttpConnection is used
  from another package, so the flag and host-check helpers are package-private.
- Use getContentLengthLong so archives larger than 2 GiB report a real size.
- Do not leak the connection if the response status cannot be read.
- Rename the loopback test to say what it asserts, and assert the listener is
  never contacted rather than only describing it in a comment.